fix font icon align

--- a/src/components/App.styl
+++ b/src/components/App.styl
@@ -10,7 +10,6 @@
   font-family: iconfont !important;
   color: inherit;
   font-style:normal;
-  vertical-align:text-top;
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
