--- a/src/components/storylist/StoryItem.styl
+++ b/src/components/storylist/StoryItem.styl
@@ -50,7 +50,6 @@
   @media screen and (max-width: 700px)
     font-size: 1rem;
 .extra
-  height: 15px;
   font-size: 0.8rem;
   color: #9B9B9B;
   @media screen and (max-width: 700px)
